--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=gamefinder
+
+spring.jpa.defer-datasource-initialization=true
+
+spring.datasource.url=jdbc:h2:mem:gamefinder
